# strawberry_test

./: README.md  fixtures.json  manage.py  pyproject.toml
sample_strawberry/: asgi.py  settings.py  urls.py  wsgi.py
school/: admin.py  models.py
school/migrations/: 0001_initial.py
strawberry_graphql/: queries.py  schema.py  types.py
